# shipyard-ui

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.html  nginx.conf  supervisord.conf
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
src/: lib.rs  main.rs
