[package]
name = "shipyard-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-web = { version = "3.3.2", features = ["openssl"] }
cached = "0.26"
anyhow = "1.0"
serde = "1.0"
shipyard-ui = { version = "0.1.0", path = ".."}

[[bin]]
name = "backend"
path = "src/main.rs"