[package]
name = "shipyard-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
material-yew = {version = "0.1.0", features = ["full"]}
shipyard-ui = { version = "0.1.0", path = ".."}
anyhow = "1.0.51"